--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -1,2 +1,16 @@
 
-# hkbhjkbjk
+# 实验一：分析SQL执行计划，执行SQL语句的优化指导
+
+##查询1：
+
+代码：
+```SQL
+SELECT d.department_name，count(e.job_id)as "部门总人数"，
+avg(e.salary)as "平均工资"
+from hr.departments d，hr.employees e
+where d.department_id = e.department_id
+and d.department_name in ('IT'，'Sales')
+GROUP BY department_name;
+```
+
+结果：
