--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -14,3 +14,20 @@ GROUP BY department_name;
 
 结果：
 ![查询1](https://github.com/ybyhy/Oracle/blob/master/1.png)
+
+分析：
+
+
+## 查询2：
+代码：
+```SQL
+SELECT d.department_name，count(e.job_id)as "部门总人数"，
+avg(e.salary)as "平均工资"
+FROM hr.departments d，hr.employees e
+WHERE d.department_id = e.department_id
+GROUP BY department_name
+HAVING d.department_name in ('IT'，'Sales');
+```
+
+结果：
+![查询1](https://github.com/ybyhy/Oracle/blob/master/2.png)
