--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -18,6 +18,8 @@ GROUP BY department_name;
 
 分析：
 
+SQL优化指导：
+
 
 ## 查询2：
 代码：
@@ -35,3 +37,5 @@ HAVING d.department_name in ('IT'，'Sales');
 ![查询1](https://github.com/ybyhy/Oracle/blob/master/2.png)
 
 分析：
+
+SQL优化指导：
