--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -16,9 +16,8 @@ GROUP BY department_name;
 
 ![查询1](https://github.com/ybyhy/Oracle/blob/master/1.png)
 
-分析：
-
 SQL优化指导：
+![优化指导1](https://github.com/ybyhy/Oracle/blob/master/3.png)
 
 
 ## 查询2：
@@ -34,8 +33,13 @@ HAVING d.department_name in ('IT'，'Sales');
 
 结果：
 
-![查询1](https://github.com/ybyhy/Oracle/blob/master/2.png)
-
-分析：
+![查询2](https://github.com/ybyhy/Oracle/blob/master/2.png)
 
 SQL优化指导：
+![优化指导2](https://github.com/ybyhy/Oracle/blob/master/4.png)
+
+
+## 分析：
+1）虽然查询语句不一样，但是两次查询的结果是一样的。
+
+2）第二个查询比第一个查询平均需要的时间更少。
