--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -46,7 +46,15 @@ SQL优化指导：
 
 
 ## 自定义查询：
+各个部门平均、最大、最小工资、人数，按照部门号升序排列
+
 代码：
 ```SQL
-
+select department_id ,avg(salary),max(salary),min(salary),count(*) 
+from employees group by department_id 
+order by department_id asc;
 ```
+
+结果：
+
+![查询3](https://github.com/ybyhy/Oracle/blob/master/5.png)
