--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -58,3 +58,7 @@ order by department_id asc;
 结果：
 
 ![查询3](https://github.com/ybyhy/Oracle/blob/master/5.png)
+
+分析：
+
+1）从以上可以看出，关键词的大小写统一可以有效的提高效率。
