--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -39,12 +39,17 @@ SQL优化指导：
 ![优化指导2](https://github.com/ybyhy/Oracle/blob/master/4.png)
 
 
-## 分析：
+## 分析执行计划：
+查询1：
+![执行计划1](https://github.com/ybyhy/Oracle/blob/master/6.png)
+查询2：
+![执行计划2](https://github.com/ybyhy/Oracle/blob/master/7.png)
+分析：
 1）虽然查询语句不一样，但是两次查询的结果是一样的。
 
 2）第二个查询比第一个查询平均需要的时间更少。
 
-3）
+3）从图片可看出，第二种查询更加合理，但是占用的CPU更大。
 
 
 ## 自定义查询：
