--- a/test1/实验1.md
+++ b/test1/实验1.md
@@ -49,7 +49,10 @@ SQL优化指导：
 
 2）第二个查询比第一个查询平均需要的时间更少。
 
-3）从图片可看出，第二种查询更加合理，但是占用的CPU更大。
+4）从查询执行计划可以知道。
+查询一：Cost=5，Rows=20 Predicate Information中有一次索引搜索access，一次全表搜索filter。
+查询二：Cost=7，Rows=106 Predicate Information中有一次搜索access，两次搜索filter。
+比较可以看出查询一的大部分参数都优于查询二。从分析两个查询的sql语句来看，查询一是先过滤后汇总， 参与汇总与计算的数据量少，而查询二是先汇总后过滤，参与汇总与计算的数据量多。所以相比之下查询一更优。
 
 
 ## 自定义查询：
@@ -68,4 +71,4 @@ order by department_id asc;
 
 分析：
 
-1）从以上可以看出，关键词的大小写统一可以有效的提高效率。
+1）cost=4,rows=107,可以看出此查询不是很优。
