--- a/test2/实验2.md
+++ b/test2/实验2.md
@@ -1,1 +1,13 @@
+# 实验2：用户管理 - 掌握管理角色、权根、用户的能力，并在用户之间共享对象。
 
+## 第1步：以system登录到pdborcl，创建角色con_res_view和用户new_user，并授权和分配空间：
+![步骤1](https://github.com/ybyhy/Oracle/blob/master/test2/1.png)
+
+## 第2步：新用户new_user连接到pdborcl，创建表mytable和视图myview，插入数据，最后将myview的SELECT对象权限授予hr用户。
+![步骤2](https://github.com/ybyhy/Oracle/blob/master/test2/2.png)
+
+## 第3步：用户hr连接到pdborcl，查询new_user授予它的视图myview
+![步骤3](https://github.com/ybyhy/Oracle/blob/master/test2/3.png)
+
+## 查看数据库的使用情况
+![步骤4](https://github.com/ybyhy/Oracle/blob/master/test2/4.png)
