--- a/test3/实验3.md
+++ b/test3/实验3.md
@@ -1,1 +1,15 @@
+# 实验3：创建分区表
 
+##  创建orders表
+![](https://github.com/ybyhy/Oracle/blob/master/test2/1.png)
+
+## 创建order_details表
+![](https://github.com/ybyhy/Oracle/blob/master/test2/2.png)
+
+## 你需要使用system用户给你自己的账号分配上述分区的使用权限。你需要使用system用户给你的用户分配可以查询执行计划的权限。
+
+## 表创建成功后，插入数据，数据能并平均分布到各个分区。每个表的数据都应该大于1万行，对表进行联合查询。
+
+## 写出插入数据的语句和查询数据的语句，并分析语句的执行计划。
+
+## 进行分区与不分区的对比实验。
