--- a/test3/实验3.md
+++ b/test3/实验3.md
@@ -1,26 +1,26 @@
 # 实验3：创建分区表
 
 ##  创建orders表
-![](https://github.com/ybyhy/Oracle/blob/master/test2/1.png)
+![](https://github.com/ybyhy/Oracle/blob/master/test3/1.png)
 
 ## 创建order_details表
-![](https://github.com/ybyhy/Oracle/blob/master/test2/2.png)
+![](https://github.com/ybyhy/Oracle/blob/master/test3/2.png)
 
 ## 你需要使用system用户给你自己的账号分配上述分区的使用权限。你需要使用system用户给你的用户分配可以查询执行计划的权限。
 - 分配查询权限
 ```sql
 grant select on YHY.ORDERS to yhy;
 ```
-![](https://github.com/ybyhy/Oracle/blob/master/test2/3.png)
+![](https://github.com/ybyhy/Oracle/blob/master/test3/3.png)
 ```sql
 grant select on YHY.ORDER_DETAILS to yhy;
 ```
-![](https://github.com/ybyhy/Oracle/blob/master/test2/4.png)
+![](https://github.com/ybyhy/Oracle/blob/master/test3/4.png)
 - 分配表空间权限
 ```sql
 grant UNLIMITED TABLESPACE to yhy;
 ```
-![](https://github.com/ybyhy/Oracle/blob/master/test2/5.png)
+![](https://github.com/ybyhy/Oracle/blob/master/test3/5.png)
 
 ## 表创建成功后，插入数据，数据能并平均分布到各个分区。每个表的数据都应该大于1万行，对表进行联合查询。
 - 插入orders表
@@ -44,14 +44,14 @@ values (m,'user'||m,'10000',to_date('2017-05-04 00:00:00', 'SYYYY-MM-DD HH24:MI:
   dbms_output.put_line('end:'||sysdate); 
 end;
 ```
-![](https://github.com/ybyhy/Oracle/blob/master/test2/6.png)
-通过对m的值进行修改及对时间的修改达到平均插入到不同的分区里面。总共的数据为16666条。
+![](https://github.com/ybyhy/Oracle/blob/master/test3/6.png)
+通过对m的值进行修改及对时间的修改达到平均插入到不同的分区里面。总共的数据为19999条。
 
 ## 对插入的数据进行验证：
 ```sql
 select count(*) from orders;
 ```
-![](https://github.com/ybyhy/Oracle/blob/master/test2/7.png)
+![](https://github.com/ybyhy/Oracle/blob/master/test3/7.png)
 ## 插入order_details表
 ```sql
 declare 
@@ -73,6 +73,8 @@ values (m,m,'product'||m,15,29);
   dbms_output.put_line('end:'||sysdate); 
 end;
 ```
+通过对order_id的值进行改变，来达到关联order表中的外键，并分配到各个分区里面。共插入16664条数据。
+![](https://github.com/ybyhy/Oracle/blob/master/test3/8.png)
 - 对表中数据进行联合查询
 ```sql
 select 
@@ -84,6 +86,8 @@ from
     ORDERS
 INNER JOIN ORDER_DETAILS ON (orders.order_id=order_details.order_id);
 ```
+查询结果
+![](https://github.com/ybyhy/Oracle/blob/master/test3/9.png)
 ## 分析执行计划
 ### 执行计划代码：
 ```sql
@@ -99,7 +103,8 @@ INNER JOIN ORDER_DETAILS ON (orders.order_id=order_details.order_id);
 
 select * from table(dbms_xplan.display());
 ```
-
+执行结果
+![](https://github.com/ybyhy/Oracle/blob/master/test3/10.png)
 
 由执行结果可知：最先执行的是`TABLE ACCESS FULL`，意思为对order_details表进行全表扫描。
 
